--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
+<html lang="en"><head>
     <!-- basic -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <!-- site metas -->
-    <title>Jof</title>
-    <meta name="keywords" content="">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <title>Bank of Security - by ThreatMonIT</title>
+    <meta name="keywords" content="bank, cyber threat, cti, cyber threat intelligence">
+    <meta name="description" content="ThreatMonIT's demo web page.">
+    <meta name="author" content="ThreatMonIT">
     <!-- bootstrap css -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- style css -->
@@ -20,7 +18,7 @@
     <!-- Responsive-->
     <link rel="stylesheet" href="css/responsive.css">
     <!-- fevicon -->
-    <link rel="icon" href="images/fevicon.png" type="image/gif" />
+    <link rel="icon" href="images/fevicon.png" type="image/gif">
     <!-- Scrollbar Custom CSS -->
     <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
     <!-- Tweaks for older IEs-->
@@ -32,8 +30,8 @@
 
 <body class="main-layout">
     <!-- loader  -->
-    <div class="loader_bg">
-        <div class="loader"><img src="images/loading.gif" alt="#" /></div>
+    <div class="loader_bg" style="display: none;">
+        <div class="loader"><img src="images/loading.gif" alt="#"></div>
     </div>
     <!-- end loader -->
     <!-- header -->
@@ -52,7 +50,7 @@
                     <div class="col-xl-9 col-lg-9 col-md-9 col-sm-9">
                         <div class="menu-area">
                             <div class="limit-box">
-                                <nav class="main-menu">
+                                <nav class="main-menu" style="display: block;">
                                     <ul class="menu-area-main">
                                         <li class="active"><a href="#home">Home</a></li>
                                         <li><a href="#about">About Us</a></li>
@@ -77,14 +75,14 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="full">
-                        <h1><strong class="cur">Best</strong><br>Fresh Red Apple</h1>
+                        <h1><strong class="cur">DEMO</strong><br>Bank of Security</h1>
                             <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature</p>
-                            <div class="button_section"><a class="main_bt" href="#">Buy Now</a></div>
+                            <div class="button_section"><a class="main_bt" href="https://www.threatmonit.io/">Request a Demo</a></div>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="full text_align_center">
-                        <img class="slide_img" src="images/slider_img.png" alt="#" /> 
+                        <img class="slide_img" src="images/slider_img.png" alt="#"> 
                     </div>
                 </div>
             </div>
@@ -96,17 +94,17 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <img class="img-responsive" src="images/about_img.png" alt="#" />
+                    <img class="img-responsive" src="images/about_img.png" alt="#">
                 </div>
                 <div class="col-md-6">
                     <div class="heading margin_top_30">
-                        <h2>About our shop</h2>
+                        <h2>About our service</h2>
                     </div>
                     <div class="full margin_top_20">
                         <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip exipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     </div>
                     <div class="full margin_top_30">
-                        <a class="main_bt" href="#">Read More</a>
+                        <a class="main_bt" href="https://www.threatmonit.io/">Read More</a>
                     </div>
                 </div>
             </div>
@@ -119,33 +117,33 @@
             <div class="row">
                <div class="col-md-12">
                     <div class="heading full text_align_center">
-                        <h2 class="white_font full text_align_center">Our Fruits</h2>
+                        <h2 class="white_font full text_align_center">Our Services</h2>
                     </div>
                 </div>
             </div>
             <div class="row">
                <div class="col-md-4 margin_top_30">
                     <div class="full fr">
-                        <img class="img-responsive" src="images/f1.png" alt="#" />
+                        <img class="img-responsive" src="images/f1.png" alt="#">
                     </div>
                     <div class="full text_align_center">
-                        <h3 class="white_font">Black Grapes<br><strong class="theme_blue">Fresh Fruit</strong></h3>
+                        <h3 class="white_font">Investment Consultancy<br><strong class="theme_blue">Investment</strong></h3>
                     </div>   
                 </div>
                 <div class="col-md-4 margin_top_30">
                     <div class="full fr">
-                        <img class="img-responsive" src="images/f2.png" alt="#" />
+                        <img class="img-responsive" src="images/f2.png" alt="#">
                     </div>
                     <div class="full text_align_center">
-                        <h3 class="white_font">Pineapple<br><strong class="theme_blue">Fresh Fruit</strong></h3>
+                        <h3 class="white_font">Low Interest Loan<br><strong class="theme_blue">Credit</strong></h3>
                     </div>
                 </div>
                 <div class="col-md-4 margin_top_30">
                     <div class="full fr">
-                        <img class="img-responsive" src="images/f3.png" alt="#" />
+                        <img class="img-responsive" src="images/f3.png" alt="#">
                     </div>
                     <div class="full text_align_center">
-                        <h3 class="white_font">Bananas<br><strong class="theme_blue">Fresh Fruit</strong></h3>
+                        <h3 class="white_font">Investment in the Future<br><strong class="theme_blue">Safe</strong></h3>
                     </div>
                 </div>
             </div>
@@ -158,16 +156,16 @@
             <div class="row">
                <div class="col-md-6">
                     <div class="full main_heading_1">
-                        <h2>Fresh Lemon</h2>
+                        <h2>Global Brand</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing el sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercita tion ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure doloreprehenderin </p>
                     </div>   
                     <div class="full margin_top_30">
-                        <a class="main_bt" href="#">Read More</a>
+                        <a class="main_bt" href="https://www.threatmonit.io/">Read More</a>
                     </div>
                 </div>
                 <div class="col-md-6 margin_top_30 padding_right_0">
                     <div class="full">
-                        <img src="images/green_fr.png" alt="#" />
+                        <img src="images/green_fr.png" alt="#">
                     </div>
                 </div>
             </div>
@@ -188,10 +186,10 @@
                <div class="col-md-4 margin_top_30">
                     <div class="full" style="overflow: hidden;">
                     <div class="full bl">
-                        <img class="img-responsive" src="images/blog1.png" alt="#" />
+                        <img class="img-responsive" src="images/blog1.png" alt="#">
                     </div>
                     <div class="full blog_blue text_align_center">
-                        <h5 class="white_font">Post by David Mark 27/07/2019</h3>
+                        <h5 class="white_font">Post by ThreatMonIT 01/01/2021</h5>
                         <p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniadolor..</p>
                     </div> 
                      </div>  
@@ -199,10 +197,10 @@
                 <div class="col-md-4 margin_top_30">
                     <div class="full" style="overflow: hidden;">
                     <div class="full bl">
-                        <img class="img-responsive" src="images/blog2.png" alt="#" />
+                        <img class="img-responsive" src="images/blog2.png" alt="#">
                     </div> 
                     <div class="full blog_blue text_align_center">
-                        <h5 class="white_font">Post by David Mark 27/07/2019</h3>
+                        <h5 class="white_font">Post by ThreatMonIT 01/01/2021</h5>
                         <p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniadolor..</p>
                     </div>
                      </div>
@@ -210,10 +208,10 @@
                 <div class="col-md-4 margin_top_30">
                     <div class="full" style="overflow: hidden;">
                     <div class="full bl">
-                        <img class="img-responsive" src="images/blog3.png" alt="#" />
+                        <img class="img-responsive" src="images/blog3.png" alt="#">
                     </div> 
                     <div class="full blog_blue text_align_center">
-                        <h5 class="white_font">Post by David Mark 27/07/2019</h3>
+                        <h5 class="white_font">Post by ThreatMonIT 01/01/2021</h5>
                         <p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniadolor..</p>
                     </div>
                     </div>
@@ -229,16 +227,16 @@
                 
                 <div class="col-md-6 padding_left_0">
                     <div class="full">
-                        <img class="float-left" src="images/fruit_img.png" alt="#" />
+                        <img class="float-left" src="images/fruit_img.png" alt="#">
                     </div>
                 </div>
 
                <div class="col-md-6">
                 <div class="heading">
-                        <h2>Request a <strong class="theme_blue">Call Back</strong></h2>
+                        <h2>Request a <strong class="theme_blue">Demo</strong></h2>
                     </div>
                     <div class="full margin_top_20">
-                        <form>
+                        <form action="https://www.threatmonit.io/contact-us/">
                         <div class="row">
                             <div class="col-sm-12">
                                <input class="form-control" placeholder="Your Name" type="text" required="">
@@ -281,7 +279,7 @@
                               <a href="#fruits">Fruits</a><br>
                               <a href="#blog">Blog</a><br>
                               <a href="#contact">Contact Us</a>
-                        </div>
+                        </p></div>
                         <div class="col-lg-3 col-md-6 col-sm-12">
                             <h3>Recent Post</h3>
                             <p><span><img src="images/f_b1.png"></span><span>consectetur adipisc elit,<br>sed do eiusmod</span></p>
@@ -291,11 +289,11 @@
                         <div class="col-lg-3 col-md-6 col-sm-12">
                             <h3>Newsletter</h3>
                             <p>
-                                <form>
-                                    <input type="text" name="email" placeholder="Enter Your Email" /> 
+                                </p><form>
+                                    <input type="text" name="email" placeholder="Enter Your Email"> 
                                     <button>Subscribe</button>
                                 </form>
-                            </p>
+                            <p></p>
                         </div>
                     </div>
             </div>
@@ -317,6 +315,6 @@
     <!-- sidebar -->
     <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
     <script src="js/custom.js"></script>
-</body>
 
-</html>
+
+</body></html>
