--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                     <div class="row">
                         <div class="col-lg-3 col-md-6 col-sm-12">
                             <h3>Contact Us</h3>
-                            <p>Healing Center, 176 W Street name, New York, NY<br><br>(+91) 987 654 3210<br><br>demo@gmail.com</p>
+                            <p>24 Lane Phoenix Arizona United States of America<br><br>+1 620 555 5555<br><br>info@threatmonit.io</p>
                         </div>
                         <div class="col-lg-3 col-md-6 col-sm-12">
                             <h3>Pages</h3>
