--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                                     <ul class="menu-area-main">
                                         <li class="active"><a href="#home">Home</a></li>
                                         <li><a href="#about">About Us</a></li>
-                                        <li><a href="#fruits">Fruits</a></li>
+                                        <li><a href="#fruits">Services</a></li>
                                         <li><a href="#blog">Blog</a></li>
                                         <li><a href="#contact">Contact Us</a></li>
                                     </ul>
@@ -272,7 +272,7 @@
                             <p>
                               <a href="#home">Home</a><br>
                               <a href="#about">About Us</a><br>
-                              <a href="#fruits">Fruits</a><br>
+                              <a href="#fruits">Services</a><br>
                               <a href="#blog">Blog</a><br>
                               <a href="#contact">Contact Us</a>
                         </p></div>
